--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "NILAY",
   "license": "ISC",
   "dependencies": {
+    "cloudinary": "^1.21.0",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
@@ -17,6 +18,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.6.2",
     "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0",
     "nodemailer": "^6.9.15",
     "nodemon": "^3.1.4",
     "validator": "^13.12.0"
